# persian-legal-assistant

./: .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  Dockerfile  README.md  dadrah.sqlite3  dadrah_bs4_test.sqlite3  dadrah_lawyers_fixed.sqlite3  dadrah_lawyers_fixed_test.sqlite3  docker-compose.override.yml  docker-compose.yml  manage.py  memory.md  neo4j_nodes.md  project_structure.md  pyproject.toml  test_lawyers.sqlite3
config/: asgi.py  settings.py  urls.py  wsgi.py
docker/: entrypoint.web.sh
persian-legal-assistant-codex-skills/persian-legal-admin-api/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-admin-api/references/: admin-api-contracts.md
persian-legal-assistant-codex-skills/persian-legal-agentic-core/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-agentic-core/references/: agentic-core-contracts.md
persian-legal-assistant-codex-skills/persian-legal-architecture/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-architecture/agents/: openai.yaml
persian-legal-assistant-codex-skills/persian-legal-architecture/references/: ports-and-adapters.md
persian-legal-assistant-codex-skills/persian-legal-docker-runtime/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-docker-runtime/agents/: openai.yaml
persian-legal-assistant-codex-skills/persian-legal-docker-runtime/references/: docker-compose-contract.md
persian-legal-assistant-codex-skills/persian-legal-evaluation-recommender/references/: evaluation-recommender-contracts.md
persian-legal-assistant-codex-skills/persian-legal-graphrag-ingestion/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-graphrag-ingestion/agents/: openai.yaml
persian-legal-assistant-codex-skills/persian-legal-graphrag-ingestion/references/: ingestion-contracts.md
persian-legal-assistant-codex-skills/persian-legal-lawyer-fetcher/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-lawyer-fetcher/scripts/: fetch_lawyers.py  lawyer.sh
persian-legal-assistant-codex-skills/persian-legal-nextjs-ui/: SKILL.md
persian-legal-assistant-codex-skills/persian-legal-nextjs-ui/agents/: openai.yaml
persian-legal-assistant-codex-skills/persian-legal-nextjs-ui/references/: ui-contracts.md
scripts/: cookies.txt  dadrah_crawler_bs4.py  dadrah_crawler_bs4_2.py  dadrah_crawler_lawyer.py  dadrah_lawyers_only.py  embed_neo4j_nodes_batch.py  import_dadrah_to_neo4j.py  import_lawyers_to_neo4j.py  import_novinlaw_to_neo4j.py  novinlaw_crawler.py  novinlaw_files_crawler.py  novinlaw_terminologies_crawler.py  novinlaw_unanimity_crawler.py  novinlaw_unanimity_crawler_v2_fixed.py
skills/persian-legal-admin-api/agents/: openai.yaml
skills/persian-legal-agentic-core/: SKILL.md
skills/persian-legal-agentic-core/agents/: openai.yaml
skills/persian-legal-evaluation-recommender/: SKILL.md
skills/persian-legal-evaluation-recommender/agents/: openai.yaml
skills/persian-legal-lawyer-fetcher/: SKILL.md
skills/persian-legal-lawyer-fetcher/agents/: openai.yaml
skills/persian-legal-lawyer-fetcher/references/: bars.json  source-contract.md
skills/persian-legal-lawyer-fetcher/scripts/: fetch_dadrah.py
src/legal_assistant/: __init__.py
src/legal_assistant/application/: __init__.py  agent.py  document_ingestion.py  ports.py  research.py
src/legal_assistant/application/agentic/: __init__.py  components.py  graph.py  state.py
src/legal_assistant/application/evaluation/: __init__.py  metrics.py  service.py
src/legal_assistant/application/services/: __init__.py  graph_extraction.py  hybrid_retriever.py  (+2 more)
src/legal_assistant/config/: __init__.py  bootstrap.py  settings.py
src/legal_assistant/domain/: __init__.py  errors.py  models.py  research.py
src/legal_assistant/infrastructure/: fakes.py
src/legal_assistant/interfaces/: __init__.py
test_3398/: decisions.jsonl  legal_references.jsonl  nodes.jsonl  novinlaw_unanimity.sqlite3  relations.jsonl  stats.json
test_3398/raw_html_authenticated/: unanimity_decision_37.html
tests/fixtures/documents/: sample_documents.jsonl
tests/unit/: conftest.py  test_agent_service.py  test_agent_settings.py  test_agentic_core.py  test_bootstrap.py  test_chunking.py  test_dadrah_ingestion.py  test_dadrah_native_graph.py  test_deep_agent_runtime.py  test_deepagents_build.py  test_evaluation.py  test_graph_extraction.py  test_hybrid_retriever.py  test_ingestion_service.py  test_lawyer_fetcher_skill.py  test_lawyer_recommendation.py  test_local_file_parser.py  test_neo4j_legal_search.py  test_novinlaw_neo4j_import.py  test_qdrant_legal_search.py  test_real_provider_adapters.py  test_research_service.py  test_settings.py
web/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/ask/: page.tsx
web/app/documents/: page.tsx
web/app/evaluations/: page.tsx
web/app/lawyers/: page.tsx
web/components/: ask-form.tsx  states.tsx
web/lib/api/: ask.ts  client.ts  documents.ts  evaluations.ts  lawyers.ts  types.ts
(+59 files in other folders)
