[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-legal-assistant"
version = "0.1.0"
description = "Persian legal assistant architecture and GraphRAG ingestion foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.13",
    "pyrefly>=1.1.1",
    "pytest>=8.0",
]
api = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
]
postgres = [
    "psycopg[binary]>=3.1",
]
ai = [
    "langchain-openai>=1.0,<2.0",
    "langchain-qdrant>=1.0,<2.0",
    "langchain-neo4j>=0.6,<1.0",
    "langsmith>=0.4.25,<1.0",
]
ingestion = [
    "openpyxl>=3.1",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "xlrd>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services",
]

[tool.pyrefly]
project-includes = [
    "src/**/*.py",
    "tests/**/*.py",
]
# Django/DRF-bound adapter and interface layers are dynamically typed against
# vendor base classes (ORM managers, DRF serializers) that Pyrefly cannot model
# without vendor stubs. AGENT.md explicitly allows these layers to import vendor
# SDKs; the domain/application core stays fully type-checked.
project-excludes = [
    "src/legal_assistant/interfaces/**",
    "src/legal_assistant/infrastructure/orm/**",
]
