[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-legal-assistant"
version = "0.1.0"
description = "Persian legal data collection and Neo4j import utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.13",
    "pyrefly>=1.1.1",
    "pytest>=8.0",
]
api = [
    "django>=5.0,<6.0",
]
postgres = [
    "psycopg[binary]>=3.1",
]
ai = [
    "neo4j>=5.26,<7.0",
]
ingestion = [
    "openai>=2.0,<3.0",
    "pypdf>=6.0,<7.0",
    "qdrant-client>=1.15,<1.17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services",
]

[tool.pyrefly]
project-includes = [
    "src/**/*.py",
    "tests/**/*.py",
]
# Django's dynamically generated model managers and admin descriptors are not
# represented accurately by the available type information. Provider-neutral
# application code and the PDF/OpenAI/Qdrant adapters remain type-checked.
project-excludes = [
    "src/legal_assistant/infrastructure/documents/admin.py",
    "src/legal_assistant/infrastructure/documents/apps.py",
    "src/legal_assistant/infrastructure/documents/models.py",
    "src/legal_assistant/infrastructure/documents/repository.py",
    "src/legal_assistant/infrastructure/documents/management/**",
    "src/legal_assistant/infrastructure/documents/migrations/**",
]
